Added the rest of the Webpages

--- a/nytrack/main/templates/main/result.html
+++ b/nytrack/main/templates/main/result.html
@@ -1,4 +1,4 @@
-{% extends 'homepage/base.html' %}
+{% extends 'home/base.html' %}
 
 
 <!DOCTYPE html>
@@ -20,7 +20,7 @@
         <h4>Arriving Date: </h4>{{ arrive_date }}
         <h4>Train Number: </h4>{{ train_number }}<br><br>
 
-        <a href='/purchase/'>Purchase Ticket</a>
+        <a href='/buy/'>Purchase Ticket</a>
         <br><br>
         <a href='/search/'>Search for another train</a>
         <br><br>
@@ -37,4 +37,3 @@
 
 </body>
 </html>
-
