--- a/nytrack/main/templates/main/search.html
+++ b/nytrack/main/templates/main/search.html
@@ -5,7 +5,7 @@
  It should be able to fetch the necessary information in our database and output it for the user to see
  -->
 
-{% extends "homepage/base.html" %}
+{% extends "home/base.html" %}
 
 
 <html lang="en">
