Completed Front End. Documentation and Deployment Remaining

--- a/nytrack/display/templates/display/datatables_output2.html
+++ b/nytrack/display/templates/display/datatables_output2.html
@@ -13,7 +13,7 @@
     {% block content %}
 
         <h3>Seats Free</h3>
-
+        <h4>The following data shows only the entries from which tickets purchased have modified the SeatsFree Table</h4>
         {% for obj in output2 %}
 
         <p><b>Seats Free Count</b>> {{ obj.sf_count }} <b>Train Number:</b> {{ obj.sf_train }}
