--- a/nytrack/buy/templates/buy/purchase_ticket.html
+++ b/nytrack/buy/templates/buy/purchase_ticket.html
@@ -7,30 +7,42 @@
     <title>Buy Tickets</title>
 </head>
 <body>
+  <div class="container">
+  {% block content %}
 
+    <div class="col-sm-6">
+      <h2 class="subtitle">Buy your Ticket</h2>
+      
+      <form method="POST" action = "">{% csrf_token %}
+          <h4>Depart From | <strong class="text-primary">{{start}}</strong> </h4> 
+          <div>{{ form.trip_start_station }}</div>
 
-    <div class="container">
-    {% block content %}
+          <h4>Arrive To | <strong class="text-primary">{{end}}</strong></h4>
+          <div>{{ form.trip_end_station }}</div>
+          
+          <h4>Trip Date</h4> 
+          <div>{{ form.trip_date }}</div>
+          <div>Example date: 2018-01-01 {{dates.0}}</div>
+          
+          <h4>Payment Method</h4> 
+          <div>{{ form.trip_pay_method }}</div>
+          
+          <input type="submit" value="Purchase Ticket!"/>
+      </form>
 
-    <h2> Complete your purchase</h2>
+    </div>
 
-        <form method="POST" action = "">{% csrf_token %}
-
-            <p>Depart From</p> {{ form.trip_start_station }}
-            <br><br>
-            <p>Arrive To</p> {{ form.trip_end_station }}
-            <br><br>
-            <p>Trip Date</p> {{ form.trip_date }}<p>Example date: 2017-06-01 06:00:00</p>
-            <br>
-            <p>Payment Method</p> {{ form.trip_pay_method }}
-            <br><br><br>
-            <input type="submit" value="Purchase Ticket!"/>
-
-        </form>
+    <div class="col-sm-6">
+      <h2 class="subtitle">Available Times</h2>
+      <h4>These are all the departure times for {{start}} station</h4>
+      {% for date in dates %}
+        <h4 class="text-success">{{date}}</h4>
+      {% endfor %}
+    </div>
 
     {% endblock content %}
     </div>
-
+  </div>
 
 </body>
 </html>
