--- a/nytrack/buy/templates/buy/success.html
+++ b/nytrack/buy/templates/buy/success.html
@@ -11,18 +11,16 @@
 
     <div class="container">
     {% block content %}
-
-
-        <h3>{{ title }}</h3>
-        <h4>Departing Station: </h4>{{ start }}
-        <h4>Departure Date: </h4>{{ depart_time }}
-        <h4>Arriving Station: </h4>{{ end }}
-        <h4>Arriving Date: </h4>{{ arrive_time }}
-        <h4>Train Number: </h4>{{ train }}
-        <h4>Fare: $</h4>{{ fare }}
-        <h4>Ticket Number: </h4><br><br>
-
-
+      <div class="col-sm-12">
+        <h2 class="subtitle">{{ title }}</h2>
+        <h4 class="success-ticket">Departing Station: {{ start }}</h4>
+        <h4 class="success-ticket">Departure Date: {{ depart_time }}</h4>
+        <h4 class="success-ticket">Arriving Station: {{ end }}</h4>
+        <h4 class="success-ticket">Arriving Date: {{ arrive_time }}</h4>
+        <h4 class="success-ticket">Train Number: {{ train }}</h4>
+        <h4 class="success-ticket">Fare: ${{ fare }}</h4>
+        <h4 class="success-ticket">Ticket Number: {{ticket_number}} </h4><br><br>
+      </div>
     {% endblock content %}
     </div>
 
