--- a/nytrack/display/templates/display/datatables_output3.html
+++ b/nytrack/display/templates/display/datatables_output3.html
@@ -15,11 +15,22 @@
         <h3>Tickets</h3>
 
         {% for obj in output3 %}
-        <p><b>Ticket id: </b>{{ obj.id }}</p><br>
-        <p><b>Trip Start Station</b>> {{ obj.trip_start_station }} <b>Train Number:</b> {{ obj.trip_train }}
-            <b>Departure Date:</b> {{ obj.trip_date }} <b>Trip End Station:</b> {{ obj.trip_end_station}}
-            <b>Segment Start:</b> {{ obj.trip_segment_start }} <b>Segment End:</b> {{ obj.trip_segment_end }}
-            <b>Payment</b> {{ obj.trip_pay_method }} <b>Fare:</b> {{ obj.trip_fare}}</p><br><br>
+        <div class="col-sm-12 panel panel-default">
+            
+            <div class="col-sm-9">
+                <h4>Ticket id: {{ obj.id }}<h4>
+                <h4>Train Number: {{ obj.trip_train }}</h4>
+                <h4>Trip Start Station: {{ obj.trip_start_station }}</h4>
+                <h4>Departure Date: {{ obj.trip_date }}</h4>
+                <h4>Trip End Station: {{ obj.trip_end_station}}</h4>
+                <h4>Segment Start: {{ obj.trip_segment_start }}</h4>
+                <h4>Segment End: {{ obj.trip_segment_end }}</h4>
+            </div>
+            <div class="col-sm-3">
+                <h4>Payment method: {{ obj.trip_pay_method }}</h4>
+                <h4>Fare: ${{ obj.trip_fare}}</h4>
+            </div>
+        </div>
 
         {% endfor %}
 
