--- a/nytrack/home/templates/home/app_description.html
+++ b/nytrack/home/templates/home/app_description.html
@@ -1,66 +1,79 @@
 {% extends 'home/base.html' %}
 
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
 </head>
+
 <body>
-
-    <div class="container">
-    {% block content %}
-
-        <h2>* App description, Instructions and Notes to consider *</h2>
+  <div class="container">
+  {% block content %}
+      
+      <div class="col-sm-12">
+        <h2 class="subtitle">Project Description</h2>
+          <ul>
+            <li>The purpose of this web application is to recreate the Amtrak ticket booking system</li>
+            <li>All ticket bookings <b>start</b>: 2017-06-01 6:00:00</li>
+            <li>This platform serves trains for <b>only</b> the month on June</li>
+            <li>First Trains</li>
             <ul>
-                <li>The purpose of this web application is to recreate the Amtrak ticket booking system</li>
-                <li>All ticket bookings <b>start</b>: 2017-06-01 6:00:00</li>
-                <li>This platform serves trains for <b>only</b> the month on June</li>
-                <li>First Trains</li>
-                <ul>
-                    <li>Train "1North", "Union Station | Washington, DC" departs 2017-06-01 6:00:00</li>
-                    <li>Train "1South", "South Station | Boston, MA" departs 2017-06-01 6:00:00</li>
-                </ul>
-                <li>Last Trains</li>
-                <ul>
-                    <li>Train "8North", "Union Station | Washington, DC" departs 2017-06-30 21:00:00</li>
-                    <li>Train "8South", "South Station | Boston, MA" departs 2017-06-30 21:00:00</li>
-                </ul>
-
-
+              <li>Train "1North", "Union Station | Washington, DC" departs 2017-06-01 6:00:00</li>
+              <li>Train "1South", "South Station | Boston, MA" departs 2017-06-01 6:00:00</li>
             </ul>
-
-            <h4>Instructions</h4>
+            <li>Last Trains</li>
             <ul>
-              <li>Search Available Train: Looks through our database and find if an available train exists with the given inputs</li>
-                <ul>
-                    <li>Upon clicking the search button, user is prompted with:</li>
-                    <ul>
-                        <li>Return Home</li>
-                        <li>Make Another Search</li>
-                        <li>Purchase Selected Search</li>
-                    </ul>
-                </ul>
-
-            <li>Purchase Ticket: </li>
-                <ul>
-                    <li>Upon clicking Purchase button, user is prompted with:</li>
-                    <ul>
-                        <li>Ticket information</li>
-                        <li>Train</li>
-                        <li>Departure Station</li>
-                        <li>Departure Time </li>
-                        <li>Arriving Station</li>
-                        <li>Arriving Time </li>
-                        <li>NOTE: Trip information is saved on database</li>
-                    </ul>
-                </ul>
-
+              <li>Train "8North", "Union Station | Washington, DC" departs 2017-06-30 21:00:00</li>
+              <li>Train "8South", "South Station | Boston, MA" departs 2017-06-30 21:00:00</li>
             </ul>
+        </ul>
+      </div>
+      
+      <div class="col-sm-12">
+        <h2 class="subtitle">Instructions</h2>
+          <ul>
+            <li>Search Available Train: Looks through our database and find if an available train exists with the given inputs</li>
+              <ul>
+                  <li>Upon clicking the search button, user is prompted with:</li>
+                  <ul>
+                      <li>Return Home</li>
+                      <li>Make Another Search</li>
+                      <li>Purchase Selected Search</li>
+                  </ul>
+              </ul>
+          </ul>
+      </div>
 
-    {% endblock content %}
-    </div>
+      <div class="col-sm-12">
+        <h2 class="subtitle">Purchase Ticket</h2>
+          <ul>
+            <li>Upon clicking Purchase button, user is prompted with:</li>
+            <ul>
+              <li>Ticket information</li>
+              <li>Train</li>
+              <li>Departure Station</li>
+              <li>Departure Time </li>
+              <li>Arriving Station</li>
+              <li>Arriving Time </li>
+              <li>NOTE: Trip information is saved on database</li>
+            </ul>
+          </ul>
+      </div>
+
+{% endblock content %}
+  </div>
 
 </body>
+
 </html>
+
+
+
+
+
+
+
+
+
+
