--- a/nytrack/home/templates/home/base.html
+++ b/nytrack/home/templates/home/base.html
@@ -11,7 +11,7 @@
       <link rel="stylesheet" href='{% static "css/base.css" %}' />
       <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-      
+
   </head>
 
   <body class="body">
@@ -22,9 +22,9 @@
           <img src="https://upload.wikimedia.org/wikipedia/commons/4/47/Logo_des_trains_grandes_lignes.png">
         </div>
     </div>
-    
-    <div class="container">      
-      
+
+    <div class="container">
+
       <div class="col-sm-3">
         <div class="bs-sidebar" id="sidebar">
           <ul class="nav nav-pills nav-stacked">
@@ -32,6 +32,7 @@
           <!-- <li><a href='/search/'>Search</a></li> -->
           <li><a href='/buy/'>Buy or Search</a></li>
           <li><a href='/display/'>Display Train Schedule</a></li>
+          <li><a href=https://github.com/steveipkis/Db_Railway>Source Code</a></li>
           </ul>
         </div>
       </div>
@@ -47,9 +48,3 @@
 
 
 </html>
-
-
-
-
-
-
